# spi-pio-rs

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: build_and_test.yml
examples/: pico_spi_pio_sd_card.rs
src/: lib.rs
