[package]
name = "spi-pio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SPI driver implementation using the RP2040's PIO peripheral."
documentation = "https://docs.rs/spi-pio"
repository = "https://github.com/rp-rs/spi-pio-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
eh1_0_alpha = { version = "1.0.0-rc.1", package = "embedded-hal", optional = true }
embedded-hal = "0.2.7"
nb = "1.1.0"
pio = "0.2.1"
pio-proc = "0.2.2"
rp2040-hal = "0.9.0"
fugit = "0.3.7"
defmt = { version = "0.3.5", optional = true }

[dev-dependencies]
rp2040-hal = { version = "0.9.0", features = ["defmt"] }
rp-pico = "*"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
cortex-m-rt = "0.7"
nb = "1.1"
embedded-sdmmc = "0.6.0"
pio = "0.2.1"
pio-proc = "0.2.2"
critical-section = "1.1.2"

defmt = "0.3.5"
defmt-rtt = "0.4.0"
